--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -7,5 +7,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.6"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.6-rc2-final"/>
   </ItemGroup>
 </Project>
