--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "saoirhowe3407626njkh46jh34jkh63kj4h6k36h4h576l34h75j"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server = localhost; Database=productiondotnet; Uid=root; Pwd=password"
+    "DefaultConnection": "Data Source = backend.db"
   },
   "Logging": {
     "LogLevel": {
