updated backend to .NET Core 3

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "AppSettings":{
+  "AppSettings": {
     "Token": "saoirhowe3407626njkh46jh34jkh63kj4h6k36h4h576l34h75j"
   },
   "ConnectionStrings": {
@@ -7,7 +7,9 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
