--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,10 @@
     "typescript": "~3.5.3"
   },
   "resolutions": {
-    "minimist": "^1.2.4"
+    "minimist": "^1.2.4",
+    "http-proxy": "^1.18.1",
+    "yargs-parser": "^18.1.1",
+    "kind-of": "^6.0.3",
+    "acorn": "^7.1.1"
   }
 }
